Code tidying and fixed sound alignment

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ h3 {
 
 .App-sounds {
   display: flex;
+  width: 100%;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-content: space-evenly;
@@ -81,4 +82,5 @@ h3 {
 
 .App-sound-icon {
   font-size: 75px;
+  opacity: 0.2;
 }
